--- a/src/components/ImageRemoval/ImageRemoval.module.scss
+++ b/src/components/ImageRemoval/ImageRemoval.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 @import '../../styles/responsive.scss';
 
-.imageEnhancerContainer {
+.ImageRemovalContainer {
    height: 100%;
    display: flex;
    flex-direction: column;
@@ -24,8 +24,8 @@
    align-items: center;
    gap: 5px;
    font-size: 1rem;
-   border: 2px dashed white;
    border-radius: 5px;
+   border: 2px dashed white;
    cursor: pointer;
 
    img {
