--- a/src/components/ImageEnhancer/ImageEnhancer.module.scss
+++ b/src/components/ImageEnhancer/ImageEnhancer.module.scss
@@ -12,7 +12,7 @@
 
 .formUploadContainer {
    width: 100%;
-   height: 450px;
+   height: 400px;
 }
 
 .formUpload {
@@ -82,6 +82,15 @@
    padding: 10px;
    gap: 15px;
    color: white;
+
+   span {
+      &:nth-child(1) {
+         width: 100px;
+         white-space: nowrap;
+         overflow: hidden !important;
+         text-overflow: ellipsis;
+      }
+   }
 
    svg {
       cursor: pointer;
